--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV#2-HTML, CSS and Git Basics</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="container">
         <div class="column-left">
             <header>
                 <h2>ALEX-KLINTSEVICH</h2>
-                <img src="./rsschool-cv/" alt="avatar" width="200px">
+                <img src="./img/ava.jpg" alt="avatar" width="200px">
             </header>
             <main> </main>
         </div>
