refactor: update info in section 'projects'

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
             <ul>
               <li> <a href="https://rolling-scopes-school.github.io/spacepocket1985-JSFE2023Q1/minesweeper/"
                   target="_blank"> A classic game — Minesweeper.</a></li>
-              <li> <a href="https://rolling-scopes-school.github.io/spacepocket1985-JSFE2023Q1/shelter/index.html"
-                  target="_blank">Shelter is a two page project</a> </li>
+              <li> <a href="https://spacepocket1985.github.io/cssBayan/"
+                  target="_blank">An accordion with HTML and CSS only</a> </li>
             </ul>
           </div>
         </section>
