--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     rel="stylesheet">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="./css/style.css">
   <title>CV Alex Klintsevich</title>
 </head>
 
