refactor: update index.html

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
     <footer class="footer">
       <div class="my-git"><a href="https://github.com/spacepocket1985" target="_blank"><img src="./images/git-pic.png"
             alt="github logo" height="40"></a></div>
-      <div class="date-created">2022</div>
-      <div class="rs"><a href="https://rs.school/" target="_blank"><img src="./images/rs.png" alt="rs_school"
+      <div class="date-created">2023</div>
+      <div class="rs"><a href="https://rs.school/js-stage0/" target="_blank"><img src="./images/rs.png" alt="rs_school"
             height="40"></a></div>
 
     </footer>
